--- a/servicos.html
+++ b/servicos.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Serviços</title>
 </head>
 <body>
 
     <!-- Menu de Navegação -->
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="home.html">Serviços</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
 
-    <!-- Conteúdo Principal -->
-    <h1>Bem-vindo ao nosso site!</h1>
-    <p>Selecione uma das opções no menu para navegar pelas páginas.</p>
+    <!-- Conteúdo da Página Serviços -->
+    <h1>Serviços Oferecidos</h1>
+    <p>Aqui você encontrará informações sobre os serviços que oferecemos.</p>
 
 </body>
 </html>
